# advent-of-code

./: CONTRIBUTING.md  README.md  pyproject.toml
notebooks/: _template.ipynb
notebooks/2025/: day01.ipynb  day02.ipynb  day03.ipynb  day04.ipynb  day05.ipynb  day06.ipynb  day07.ipynb  day08.ipynb  day09.ipynb  day10.ipynb  day11.ipynb  day12.ipynb
scripts/: clean-ctt.sh  clean-test.sh  clean.sh  install-ipykernel.sh  make-all-nbs.sh  make-all-pys.sh  uninstall-ipykernel.sh  update-reqs.sh
scripts/lint/: install.sh  reinstall.sh  run-all.sh  run.sh  update.sh
scripts/test/: cov-report.sh  cov.sh  ctt.sh  fast.sh  test-cov.sh  test.sh
src/advent_of_code_2025/: __init__.py  _template.py  aoc_notebook.py  aoc_script.py
